another possible fix for rendering issue with firefox button text overflow bug

--- a/greasemonkey/trello-swimlane-navigation/trello-swimlane-navigation.css
+++ b/greasemonkey/trello-swimlane-navigation/trello-swimlane-navigation.css
@@ -30,7 +30,7 @@
 
 .lane-menu button {
 	display: block;
-	padding: 0 8px 0 38px;
+	padding: 0 8px 0 30px;
 	margin: 0 0 3px 0;
 	width: 100%;
 	text-align: left;
@@ -51,6 +51,10 @@
 	text-overflow: ellipsis;
 	width: 100%;
 	display: block;
+	padding-left: 8px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 .lane-menu button img,
